--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,66 +4,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DSMCER HW 3\n",
+    "# DSMCER HW 3\n",
     "\n",
-    "###  Part 1 Descriptive Statistics\n",
+    "The goal of this homework is to solidify your understanding of data preprocessing to set yourself up for a supervised machine learning application __that effectively addresses a goal__.\n",
     "\n",
-    "#### 1 a) \n",
-    "Define three numpy arrays of random numbers with N=1000 points as following:\n",
-    "   * array 1 uniform random numbers between 0.6 and 14.2\n",
-    "   * array 2 gaussian distributed random numbers - the mean of the distribution is $\\mu$=6.8 and the standard deviation is 5\n",
-    "   * array 3 gamma distributed random numbers - here $k$=2 and $\\theta=3.4$\n",
+    "## Note the following points carefully:\n",
     "\n",
-    "#### 1 b) \n",
-    "Create a row of two plots. \n",
-    "   * Plot 1 - show the three **empirical distributions** of the data. \n",
-    "   * Plot 2 - show the three computed **CDF distributions** of the data. \n",
-    "Make sure the plot are clear and properly labeled.\n",
+    "- Pay particular attention to the goal stated for the problems\n",
     "\n",
-    "#### 1 c) \n",
-    "Go get a coffee or tea - whatever you prefer - come back and rerun your notebook - did your plots change? If so why? Is there a way to fix the results?"
+    "- Any plots should be the highest quality possible and, in your judgement, ready for inclusion in a formal report or publication. This includes labeling, font sizes, etc.\n",
+    "\n",
+    "- While we encourage you to chat with eachother and work together, you should not be copying code.\n",
+    "\n",
+    "- Remember one of the biggest advantages of the python data stack - someone has probably written code for what you need to do. If you find yourself writing lines and lines of complex code here there is probably a better way, eg. a function written in numpy, scipy, pandas, seaborn etc."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2 Error bars and confidence interval\n",
-    "\n",
-    "Data was gathered for the concentration of a compound, A as a function of time $C_A(t)$. Two samples of the dataset are provided in files `CA_1.csv` and `CA_2.csv`\n",
-    "\n",
-    "#### 2 a) \n",
-    "Load the `CA_1.csv` and the `CA_2.csv` files. \n",
-    "Create two plots in a row: \n",
-    "* Plot 1 - plot the first 10 values of the CA_1 and CA_2 concentrations as a function of time and the error bars computed using the **standard deviation**. \n",
-    "* Plot 2 - plot the first 10 values of the CA_1 and CA_2 concentrations as a function of time and the error bars computed using the **standard error of the mean**. *Hint*: look at the `pyplot.errorbar()` function. Make sure to clearly label your axes and data.\n",
-    "\n",
-    "#### 2 b)\n",
-    "Estimate the **confidence interval** within which you believe the mean concentration of A is found for each sample. Use a confidence level of 90%. Are these intervals different? If so why or why not?\n",
-    "   "
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 3 Hypothesis testing \n",
+    "### Instructions for both problems:\n",
     "\n",
-    "You are given three datasets which provide you with the concentration of chemical species A, B and C in a beaker measured several times 1) at UW on a monday morning at 9am - file `C_UW_9am.csv` ; 2) at UW on the same monday morning at noon - file `C_UW_12pm.csv` ; 3) at the University of Milan on the same monday at 6pm (note, there is a 9 hour forward time difference) `C_Milan_6pm.csv`. \n",
+    "0a. Load the DES data from the SML intro notebook, the http link is [here](https://raw.githubusercontent.com/UWDIRECT/UWDIRECT.github.io/master/datasets/Politi_DES/politi_des_reformatted.csv).\n",
     "\n",
-    "#### 3.1 Single sample test\n",
-    "Choosing from this data, formulate a single sample statistical hypothesis. From past data you are told that your average concentration of $\\bar{C}_A=$ 0.8 mol/L, $\\bar{C}_B=$0.98 mol/L  and $\\bar{C}_C=$0.2 mol/L.\n",
-    "* clearly define your choice of dataset and justify your choice\n",
-    "* clearly define your null and alternative hypotheses\n",
-    "* define your significance level\n",
-    "* carry out a test of your alternative hypothesis\n",
+    "0b. You are going to be considering the `potential_window` column as your target for machine learning. It is continuous, so it is a regression task. __Use only the examples within the data that were not solid__, such that the target could be measured. Create a quality plot showing the empirical distribution of this value.\n",
     "\n",
-    "#### 3.2 Two sample paired test\n",
-    "Choosing from this data, formulate a paired two sample statistical hypothesis\n",
-    "* clearly define your choice of dataset and justify your choice\n",
-    "* clearly define your null and alternative hypotheses\n",
-    "* define your significance level\n",
-    "* carry out a test of your alternative hypothesis "
+    "#### For each of two distinct goals, complete the following:\n",
+    "\n",
+    "1. Conduct an appropriate split of the data such that the test set will honestly evaluate your goal.\n",
+    "\n",
+    "2. Encode the features within your dataset using an approproate choice given your goal.\n",
+    "\n",
+    "3. Apply an appropriate method of data standardization, given the features that you chose.\n",
+    "\n",
+    "4. Create a statistical test to confirm __for at least two features__ that the training and testing distributions for that feature are close. At least one of your tests should be nonparametrics. *Hint: the form of your feature will effect what test you can do - binary features  and continuous features will require different tests regardless of whether you are doing bootstrapping or a parametric test*\n",
+    "\n",
+    "5. Train and test a K-Nearest Neigbor Regressor, state the R2 score of the model. Is the model doing better than guessing the mean?\n",
+    "\n",
+    "6. Write a sentences or two stating the choices you made for preprocessing and why."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 1 - \n",
+    "\n",
+    "__Goal__: Create an interpolator of potential window for new mass rations of HBD and QAS with the same HBD and QAS species we have already tried"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 2 - \n",
+    "\n",
+    "__Goal__: Create a predictor of potential window for new DES mixtures involving QAS species never tried before"
    ]
   },
   {
@@ -77,7 +101,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python (tunnel)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -91,9 +115,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
