--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "3. Apply an appropriate method of data standardization, given the features that you chose.\n",
     "\n",
-    "4. Create a statistical test to confirm __for at least two features__ that the training and testing distributions for that feature are close. At least one of your tests should be nonparametrics. *Hint: the form of your feature will effect what test you can do - binary features  and continuous features will require different tests regardless of whether you are doing bootstrapping or a parametric test*\n",
+    "4. Create a statistical test to confirm __for at least two features__ that the training and testing distributions for that feature are close. At least one of your tests should be nonparametric. *Hint: the form of your feature will effect what test you can do - binary features  and continuous features will require different tests regardless of whether you are doing bootstrapping or a parametric test*\n",
     "\n",
     "5. Train and test a K-Nearest Neigbor Regressor, state the R2 score of the model. Is the model doing better than guessing the mean?\n",
     "\n",
@@ -64,7 +64,7 @@
    "source": [
     "### Problem 1 - \n",
     "\n",
-    "__Goal__: Create an interpolator of potential window for new mass rations of HBD and QAS with the same HBD and QAS species we have already tried"
+    "__Goal__: Create an interpolator of potential window for new mass ratio of HBD and QAS with the same HBD and QAS species we have already tried"
    ]
   },
   {
